macro(add_unittest NAME)
  add_executable(ut-${NAME} test_${NAME}.cpp common.h priority_queue.h test_timer.h)
  set_target_properties(ut-${NAME} PROPERTIES FOLDER tpie/unittest)
  target_link_libraries(ut-${NAME} tpie ${Boost_LIBRARIES})
  set(MTESTS ${ARGV})
  list(REMOVE_AT MTESTS 0)
  foreach(TEST ${MTESTS})
    add_test(${NAME}_${TEST} ut-${NAME} ${TEST})
  endforeach(TEST)
endmacro(add_unittest)

macro(add_fulltest NAME)
  set(MTESTS ${ARGV})
  list(REMOVE_AT MTESTS 0)
  foreach(TEST ${MTESTS})
    add_test(NAME ${NAME}_${TEST} CONFIGURATIONS FullTest COMMAND ut-${NAME} ${TEST})
  endforeach(TEST)
endmacro(add_fulltest)

add_unittest(allocator deque list)
add_unittest(ami_stream basic truncate)
add_unittest(array basic iterators auto_ptr memory segmented memory_segmented bit_basic bit_iterators bit_memory  copyempty arrayarray frontback swap)
add_unittest(disjoint_set basic memory)
add_unittest(external_priority_queue basic)
add_unittest(external_queue basic sized)
add_unittest(external_sort amismall small tiny)
add_unittest(external_stack new named-new ami named-ami io)
add_unittest(file_count basic)
add_unittest(filestream memory)
add_unittest(hashmap chaining linear_probing iterators memory)
add_unittest(internal_priority_queue basic memory)
add_unittest(internal_queue basic memory)
add_unittest(internal_stack basic memory)
add_unittest(internal_vector basic memory)
add_unittest(memory basic)
add_unittest(merge_sort external_report internal_report one_run_external_report small_final_fanout evacuate_before_merge evacuate_before_report)
add_unittest(packed_array basic1 basic2 basic4)
add_unittest(parallel_sort basic1 basic2 general equal_elements bad_case)
add_unittest(serialization unsafe safe)
add_unittest(stats simple)
add_unittest(stream basic array odd truncate extend backwards array_file odd_file truncate_file extend_file backwards_file user_data user_data_file)
add_unittest(stream_exception basic)
add_unittest(pipelining vector filestream fspull fsaltpush merge reverse sort sorttrivial operators uniq memory fork merger_memory fetch_forward virtual prepare end_time pull_iterator push_iterator)

add_fulltest(ami_stream stress)
add_fulltest(disjoint_set large large_cycle very_large medium ovelflow)
add_fulltest(external_priority_queue medium large large_cycle memory)
add_fulltest(external_sort amilarge large tall very_large)
add_fulltest(internal_priority_queue large_cycle)
add_fulltest(internal_vector medium large)
